[gd_scene load_steps=19 format=3 uid="uid://cnfgw3cjc8sgn"]

[ext_resource type="Script" path="res://Audio/Music/Gameplay/adaptive_music.gd" id="1_4v2h8"]
[ext_resource type="AudioStream" uid="uid://dj2hbrw5nhsud" path="res://Audio/Music/Gameplay/Drums/Core_Drums_1.wav" id="2_c8wd6"]
[ext_resource type="AudioStream" uid="uid://ddkjqrcftg1e6" path="res://Audio/Music/Gameplay/Drums/Core_Drums_2.wav" id="3_xhii0"]
[ext_resource type="AudioStream" uid="uid://84ekf0kbgy8r" path="res://Audio/Music/Gameplay/Drums/Core_Drums_3.wav" id="4_p5us8"]
[ext_resource type="AudioStream" uid="uid://dsphtat76dprf" path="res://Audio/Music/Gameplay/Drums/Core_Drums_4.wav" id="5_b6ct4"]
[ext_resource type="AudioStream" uid="uid://cbj56pcilejpk" path="res://Audio/Music/Gameplay/Amb/Core_Amb_1.wav" id="6_3wkjj"]
[ext_resource type="AudioStream" uid="uid://n7yk4686jyqj" path="res://Audio/Music/Gameplay/Amb/Core_Amb_2.wav" id="7_1dihg"]
[ext_resource type="AudioStream" uid="uid://cfeonjj4l1kjl" path="res://Audio/Music/Gameplay/Melody/Core_Melody_1.wav" id="8_kof5e"]
[ext_resource type="AudioStream" uid="uid://clmq46ywx5i66" path="res://Audio/Music/Gameplay/Melody/Core_Melody_2.wav" id="9_w22jc"]
[ext_resource type="AudioStream" uid="uid://dgj5bt6522736" path="res://Audio/Music/Gameplay/Melody/Core_Melody_3.wav" id="10_ebwb4"]
[ext_resource type="AudioStream" uid="uid://nbmjrunr34qh" path="res://Audio/Music/Gameplay/SynthBass/Core_SynthBass_1.wav" id="11_s1hhq"]
[ext_resource type="AudioStream" uid="uid://cobdgtx6l1ewh" path="res://Audio/Music/Gameplay/SynthBass/Core_SynthBass_2.wav" id="12_voimv"]
[ext_resource type="AudioStream" uid="uid://bovk1tbt4plud" path="res://Audio/Music/Gameplay/SynthBass/Core_SynthBass_3.wav" id="13_vv1gs"]
[ext_resource type="AudioStream" uid="uid://pr3lnmb8awib" path="res://Audio/Music/Gameplay/SynthBass/Core_SynthBass_4.wav" id="14_basot"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_pg1v3"]
playback_mode = 1
streams_count = 4
stream_0/stream = ExtResource("2_c8wd6")
stream_0/weight = 50.0
stream_1/stream = ExtResource("3_xhii0")
stream_1/weight = 25.0
stream_2/stream = ExtResource("4_p5us8")
stream_2/weight = 25.0
stream_3/stream = ExtResource("5_b6ct4")
stream_3/weight = 25.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_4b1lb"]
playback_mode = 1
streams_count = 2
stream_0/stream = ExtResource("6_3wkjj")
stream_0/weight = 50.0
stream_1/stream = ExtResource("7_1dihg")
stream_1/weight = 25.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_f0dgv"]
playback_mode = 1
streams_count = 3
stream_0/stream = ExtResource("8_kof5e")
stream_0/weight = 50.0
stream_1/stream = ExtResource("9_w22jc")
stream_1/weight = 25.0
stream_2/stream = ExtResource("10_ebwb4")
stream_2/weight = 25.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_omhwf"]
playback_mode = 1
streams_count = 4
stream_0/stream = ExtResource("11_s1hhq")
stream_0/weight = 60.0
stream_1/stream = ExtResource("12_voimv")
stream_1/weight = 50.0
stream_2/stream = ExtResource("13_vv1gs")
stream_2/weight = 25.0
stream_3/stream = ExtResource("14_basot")
stream_3/weight = 25.0

[node name="AdaptiveMusic" type="Node"]
script = ExtResource("1_4v2h8")

[node name="BeatTimer" type="Timer" parent="."]
wait_time = 0.6

[node name="BarTimer" type="Timer" parent="."]
wait_time = 9.6

[node name="Сore" type="Node" parent="."]

[node name="Drums" type="AudioStreamPlayer2D" parent="Сore"]
stream = SubResource("AudioStreamRandomizer_pg1v3")
panning_strength = 0.0
bus = &"RandomMusic"

[node name="Amb" type="AudioStreamPlayer2D" parent="Сore"]
stream = SubResource("AudioStreamRandomizer_4b1lb")
panning_strength = 0.0
bus = &"RandomMusic"

[node name="Melody" type="AudioStreamPlayer2D" parent="Сore"]
stream = SubResource("AudioStreamRandomizer_f0dgv")
panning_strength = 0.0
bus = &"RandomMusic"

[node name="SynthBass" type="AudioStreamPlayer2D" parent="Сore"]
stream = SubResource("AudioStreamRandomizer_omhwf")
panning_strength = 0.0
bus = &"RandomMusic"

[node name="Opening" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_s1hhq")
bus = &"RandomMusic"

[connection signal="timeout" from="BeatTimer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="BarTimer" to="." method="_on_bar_timer_timeout"]
[connection signal="finished" from="Сore/Drums" to="." method="_on_demo_track_finished"]
